# pg_wait_tracer

./: .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  RELEASING.md
client/: Cargo.toml
client/src/: chart.rs  compute.rs  main.rs  testgen.rs  trace.rs
demos/: .gitignore  Makefile  PROMPTS.md  README.md  build-server-local.sh  capture-trace.sh  dump.tape  dump.txt  record-web.mjs  record-web.sh  workload.sh
docs/: AAS_SEMANTICS_DECISION.md  CLI_REDESIGN.md  DAEMON_ARCHITECTURE.md  DEVELOPMENT_PLAN.md  FUTURE_WORK.md  QT_PM_ANALYSIS.md  REVIEW_AND_PLAN.md  REWORK_PLAN.md  ROADMAP.md  ROADMAP_AND_STATUS.md  S3_SCHED_SWITCH_CPU.md  T2_IOWORKER_STUDY.md  T8_MEASURED_CPU_PLAN.md  T8_MEASURED_CPU_REVISION.md  TRACE_FORMAT.md  TRACING_ANALYSIS_PLAN.md  TRUST_MILESTONE_PLAN.md
poc/: README.md  server.c
scripts/: detect_libbpf_usdt.sh
src/: anomaly.c  anomaly.h  backend.c  backend.h  backend_meta.c  backend_meta.h  cmdline.c  cmdline.h  compute.c  compute.h  control.c  control.h  daemon.c  daemon.h  discovery.c  discovery.h  escalation.c  escalation.h  escalation_budget.c  escalation_budget.h  event_reader.c  event_reader.h  event_stream.c  event_stream.h  event_writer.c  event_writer.h  map_reader.c  map_reader.h  output.c  output.h  perf_event.c  perf_event.h  pg_wait_tracer.c  pg_wait_tracer.h  provider.h  provider_coop.c  provider_coop.h  provider_full.c  query_text.c  query_text.h  (+16 more)
tests/: Makefile  bench_server.py  ci_smoke.sh  cloud-init-rocky9-pg18.yaml  cross_validate.c  dump_markers.c  gen_bench_traces.c  gen_test_traces.c  hetzner-vm.sh  (+74 more)
(+69 files in other folders)
